--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             <button id="generate-prompt-btn"
                 class="mt-4 w-full bg-gradient-to-r from-purple-600 to-indigo-700 text-white font-bold py-4 px-8 rounded-xl shadow-lg hover:from-purple-700 hover:to-indigo-800 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 flex items-center justify-center text-xl tracking-wide disabled:opacity-50 disabled:cursor-not-allowed disabled:transform-none"
             >
-                <span id="generate-button-text">Buat Prompt Video Ajaib!</span>
+                <span id="generate-button-text">Buat Prompt Video!</span>
             </button>
         </div>
 
