--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                     <div><label class="block text-sm font-medium text-gray-700 mb-1">Pakaian:</label><input type="text" class="w-full p-2 border-gray-300 rounded-md" data-field="clothing" value="${char.clothing}" /></div>
                     <div><label class="block text-sm font-medium text-gray-700 mb-1">Aksi:</label><input type="text" class="w-full p-2 border-gray-300 rounded-md" data-field="action" value="${char.action}" /></div>
                     <div class="col-span-2"><label class="block text-sm font-medium text-gray-700 mb-1">Karakteristik & Emosi:</label><input type="text" class="w-full p-2 border-gray-300 rounded-md" data-field="characteristics" value="${char.characteristics}" /></div>
-                    <div class="col-span-2"><label class="block text-sm font-medium text-gray-700 mb-1">Dialog:</label><textarea class="w-full p-2 border-gray-300 rounded-md" rows="2" data-field="dialogue" placeholder="Tulis dialog untuk karakter ini...">${char.dialogue}</textarea></div>
+                    <div class="col-span-2"><label class="block text-sm font-medium text-gray-700 mb-1">Dialog:</label><textarea class="w-full p-2 border-gray-300 rounded-md" rows="2" data-field="dialogue" placeholder="Bahasa Indonesia: Tulis dialog untuk karakter ini...">${char.dialogue}</textarea></div>
                 </div>`;
             
             charDiv.querySelectorAll('input, select, textarea').forEach(input => {
